plugins {
    id 'idea'
    id 'eclipse'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '1.0.21'
}

version = project.mod_version
group = project.maven_group
base { archivesName = project.archives_base_name }

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

neoForge {
    version = project.neoforge_version

    parchment {
        mappingsVersion = project.mapping_version
        minecraftVersion = project.minecraft_version
    }

    runs {
        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
        client {
            client()
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
            programArguments.addAll('--refresh-dependencies')
        }
        server {
            server()
            systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
            programArguments.addAll('--nogui')
        }
        data {
            data()
            programArguments.addAll(
                    '--mod', project.mod_id,
                    '--all',
                    '--output', file('src/generated/resources/').getAbsolutePath(),
                    '--existing', file('src/main/resources/').getAbsolutePath()
            )
        }
    }

    mods {
        "${mod_id}" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets {
    main.resources {
        srcDir 'src/generated/resources'
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    flatDir {
        dir 'libs'
    }
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
}

dependencies {
    compileOnly("org.jetbrains:annotations:26.0.1")
}

tasks.named('processResources', ProcessResources).configure {
    var properties = [
            "mod_license"      : project.mod_license,
            "mod_id"           : project.mod_id,
            "version"          : project.version,
            "mod_name"         : project.mod_name,
            "mod_url"          : project.mod_url,
            "mod_author"       : project.mod_author,
            "neoforge_version" : project.neoforge_version,
            "minecraft_version": project.minecraft_version,
    ]
    inputs.properties(properties)

    filesMatching("META-INF/neoforge.mods.toml") {
        expand properties
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}

tasks.register('publishToChronicles', Copy) {
    group = 'phoenix'
    description = 'Builds this mod and copies the jar into ../PhoenixChronicles/libs, so Chronicles picks up local changes.'
    dependsOn 'jar'
    from(layout.buildDirectory.dir('libs')) {
        include '*.jar'
        exclude '*-sources.jar'
    }
    into '../PhoenixChronicles/libs'
}